--- a/flixx-app/index.html
+++ b/flixx-app/index.html
@@ -17,6 +17,7 @@
     <script src="lib/swiper.js"></script>
     <script src="js/script.js" defer></script>
     <title>Flixx</title>
+    <link rel="icon" href="images/icon.png" type="image/x-icon" />
   </head>
   <body>
     <header class="main-header">
