--- a/flixx-app/search.html
+++ b/flixx-app/search.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/spinner.css" />
     <script src="js/script.js" defer></script>
     <title>Flixx | Search Movies & Shows</title>
+    <link rel="icon" href="images/icon.png" type="image/x-icon" />
   </head>
   <body>
     <header class="main-header">
