--- a/tracalorie-app/index.html
+++ b/tracalorie-app/index.html
@@ -41,7 +41,7 @@
         <div class="col-md-6">
           <div class="card text-center bg-dark text-white">
             <div class="card-body">
-              <div id="calories-limit" class="fs-1 fw-bold">2000</div>
+              <div id="calories-limit" class="fs-1 fw-bold"></div>
               <p class="fs-4">Daily Calorie Limit</p>
             </div>
           </div>
@@ -49,7 +49,7 @@
         <div class="col-md-6">
           <div class="card text-center bg-primary text-white">
             <div class="card-body">
-              <div id="calories-total" class="fs-1 fw-bold">400</div>
+              <div id="calories-total" class="fs-1 fw-bold"></div>
               <p class="fs-4">Gain/Loss</p>
             </div>
           </div>
@@ -59,7 +59,7 @@
         <div class="col-md-4">
           <div class="card bg-light">
             <div class="card-body">
-              <div id="calories-consumed" class="fs-1 fw-bold">700</div>
+              <div id="calories-consumed" class="fs-1 fw-bold"></div>
               <p class="fs-4">Calories Consumed</p>
             </div>
           </div>
@@ -67,7 +67,7 @@
         <div class="col-md-4">
           <div class="card bg-light">
             <div class="card-body">
-              <div id="calories-burned" class="fs-1 fw-bold">300</div>
+              <div id="calories-burned" class="fs-1 fw-bold"></div>
               <p class="fs-4">Calories Burned</p>
             </div>
           </div>
@@ -75,7 +75,7 @@
         <div class="col-md-4">
           <div class="card bg-light">
             <div class="card-body">
-              <div id="calories-remaining" class="fs-1 fw-bold">1600</div>
+              <div id="calories-remaining" class="fs-1 fw-bold"></div>
               <p class="fs-4">Calories Remaining</p>
             </div>
           </div>
@@ -168,7 +168,7 @@
 
           <div id="meal-items">
             <!-- Item 1 -->
-            <div class="card my-2">
+            <!-- <div class="card my-2">
               <div class="card-body">
                 <div class="d-flex align-items-center justify-content-between">
                   <h4 class="mx-1">Breakfast</h4>
@@ -182,9 +182,9 @@
                   </button>
                 </div>
               </div>
-            </div>
+            </div> -->
             <!-- Item 2 -->
-            <div class="card my-2">
+            <!-- <div class="card my-2">
               <div class="card-body">
                 <div class="d-flex align-items-center justify-content-between">
                   <h4 class="mx-1">Lunch</h4>
@@ -200,7 +200,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
         <!-- Workout -->
         <div class="col-md-6">
           <div class="d-flex align-items-center">
@@ -245,7 +245,7 @@
 
           <div id="workout-items">
             <!-- Item 1 -->
-            <div class="card my-2">
+            <!-- <div class="card my-2">
               <div class="card-body">
                 <div class="d-flex align-items-center justify-content-between">
                   <h4 class="mx-1">Treadmill 1 Hour</h4>
@@ -259,9 +259,9 @@
                   </button>
                 </div>
               </div>
-            </div>
+            </div> -->
             <!-- Item 2 -->
-            <div class="card my-2">
+            <!-- <div class="card my-2">
               <div class="card-body">
                 <div class="d-flex align-items-center justify-content-between">
                   <h4 class="mx-1">Bike 90 Minutes</h4>
@@ -275,7 +275,7 @@
                   </button>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -312,7 +312,7 @@
                   type="text"
                   class="form-control"
                   id="limit"
-                  placeholder="2000"
+                  placeholder="0"
                 />
               </div>
 
